@@ -46,6 +46,7 @@ Version 0.2.7 (2011-03-??)
 ------------------------------
 - Added support for language switching on checkout page (changelanguage extension)
 - Added support for language switching on order details page (changelanguage extension)
+- Improved ajax overlay position and transparency
 - Fixed potential SQL injection in product collection
 - Fixed CSS classes in checkout review and order details
 
